# Bayesian-Optimization-opencl

./: CMakeLists.txt  README.md  etc.cpp  etc.h  gemm.bak.cl  gemm.cl  inv.cl  main.cpp  rbf.cl  transpose.cl  utils.hpp
